--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     ]
   },
   "devDependencies": {
-    "react-google-maps": "^9.4.5"
+    "react-google-maps": "^9.4.5",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4"
   }
 }
