--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-google-maps": "^9.4.5",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
   }
 }
